--- a/src/main/resources/templates/fragments/otherreports/empleadoincapacidadreport.html
+++ b/src/main/resources/templates/fragments/otherreports/empleadoincapacidadreport.html
@@ -42,7 +42,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         </div>
                     </div>
                      <div class="form-group">    
-                         <td><a class="btn btn-default" id="generar">Generar</a></td>
+                         <td><a class="btn btn-default" id="generar">PDF</a></td>
+                    </div>
+                     <div class="form-group">    
+                         <td><a class="btn btn-default" id="generar">Excel</a></td>
                     </div>
                 </form>
             </div>
