--- a/src/main/resources/templates/fragments/beneficio/beneficioform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioform.html
@@ -69,9 +69,15 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <div class="col-md-12">
                         <div class="row" align="center">
                           
-                            <button type="button" class="btn btn-info"><a href="#" th:href="@{/capacitaciones/}">Regresar</a></button>
-                            <button type="submit" class="btn btn-primary">Guardar</button>
-                            <button type="reset" class="btn btn-default">Limpiar</button>
+                            <button type="button" class="btn btn-primary btn btn-link"> <span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/beneficios/}">.</a> </button>
+                            <button type="button" class="btn btn-link">Regresar</button>
+                            
+                            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                            <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
+                            <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left"></span><a href="#" th:href="@{/beneficios/}">Regresar</a></button>
+                            <!--<button type="button" class="btn btn-success">  <span class="glyphicon glyphicon-plus-sign"></span> Agregar</button>-->
+                            
+  </button>  
                         </div>
                     </div>
 
