--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -6,7 +6,12 @@ body {
 	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
   color:whitesmoke;
   font-size:12px;
-  background:#186218/*url(/images/classy_fabric.png)*/;
+  /*background:#186218/*url(/images/classy_fabric.png)*/
+  background-image: url(/sisadmrh/image/background.jpg);no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
 }
 
 form {
