--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -107,9 +107,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
                     <div class="col-md-12">
                         <div class="row" align="center">
-                            <button type="button" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
-                            <button type="submit" class="btn btn-default">Guardar</button>
-                            <button type="reset" class="btn btn-default">Limpiar</button>
+                           
+                              <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/asistenciacapacitaciones/}">Reg</a></button>
+                            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                            <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
+                        
                         </div>
                     </div>
                 </form>
