--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -86,7 +86,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="form-group">
                 <label class="col-sm-2 control-label">Desde:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control"  placeholder="DD/MM/YYYY" required="true" th:field="*{fechadesdecomite}"/>
+                    <input type="text" class="form-control ValidarFechas"  placeholder="DD/MM/YYYY" required="true" th:field="*{fechadesdecomite}"/>
                 </div>
             </div>
             <div class="form-group">
@@ -103,9 +103,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div>-->
 <div class="col-md-12">
             <div class="row" align="center">
-                <button type="button" class="btn btn-info"><a href="#" th:href="@{/comites/}">Regresar</a></button>
-                <button type="submit" class="btn btn-primary">Guardar</button>
-                <button type="reset" class="btn btn-default">Limpiar</button>
+                 <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/comites/}">Reg</a></button>
+                            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                            <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
             </div>
     </div>
         </form>
@@ -154,8 +154,19 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
        });
     }
     });
+    
 </script> 
+<script>
+function ValidarFechas()
+{
+   var fechainicial = document.getElementById("FechaInicial").value;
+   var fechafinal = document.getElementById("FechaFinal").value;
 
+   if(Date.parse(fechafinal) < Date.parse(fechainicial)) {
+
+   alert("La fecha final debe ser mayor a la fecha inicial");
+}
+</script>
 		
                 
 </body>	
