--- a/src/main/resources/templates/fragments/estado/estadoshow.html
+++ b/src/main/resources/templates/fragments/estado/estadoshow.html
@@ -40,8 +40,7 @@
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/estados/}">Regresar</a></button>
-
+ <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/estados/}">Reg</a></button>
                     </div>
                 </div>
             </div>
