--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionshow.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionshow.html
@@ -171,8 +171,7 @@
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="button" class="btn btn-info"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
-                    </div>
+ <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/evaluacioncapacitaciones/}">Reg</a></button>                    </div>
                 </div>
             </div>
         </div>
