--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
@@ -76,8 +76,7 @@
             </form>
                 <div class="col-md-12">
             <div class="row" align="center">
-                <button type="submit" class="btn btn-default"><a href="#" th:href="@{/nivelescolaridades/}">Regresar</a></button>
-                
+ <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/nivelescolaridades/}">Reg</a></button>                
             </div>
     </div>
     </div> 
