--- a/src/main/resources/templates/fragments/rol/rolform.html
+++ b/src/main/resources/templates/fragments/rol/rolform.html
@@ -47,9 +47,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div>-->
 
             <div class="row">
-            <button type="button" class="btn btn-info"><a href="#" th:href="@{/roles/}">Regresar</a></button>
-            <button type="submit" class="btn btn-primary">Guardar</button>
-            <button type="reset" class="btn btn-default">Limpiar</button>
+            <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/roles/}">Reg</a></button>
+                            <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                            <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
             </div>
         </form>
     </div>
