--- a/src/main/resources/templates/fragments/rol/rolshow.html
+++ b/src/main/resources/templates/fragments/rol/rolshow.html
@@ -34,6 +34,11 @@
                 </div>
                 
             </form>
+                 <div class="col-md-12">
+            <div class="row" align="center">
+ <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/roles/}">Reg</a></button>                
+            </div>
+    </div>
     </div>
     </div>
 </div>
