--- a/src/main/resources/templates/fragments/usuario/usuarioshow.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioshow.html
@@ -63,6 +63,11 @@
                     </div>
                 </div>
             </form>
+                    <div class="col-md-12">
+            <div class="row" align="center">
+ <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/usuarios/}">Reg</a></button>                
+            </div>
+    </div>
     </div>
     </div>
 </div>
