--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -98,7 +98,8 @@ and open the template in the editor.
 
 		/*colors dropdown box text */
 		.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
-			color: #777;
+			color: #000000;
+                        text-shadow: 0px 0px 15px white;
 		}
 
 		/*gives sidebar width/height*/
