--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -14,9 +14,9 @@
                    <div class="col_cen">
                          <div class="text-center">
                        
-                            <h2>Ministerio de Justicia y Seguridad Publica</h2>
-                            <h2>Direccion de Recursos Humanos</h2>
-                            <h2>SISADMRH</h2>
+                            <h2 class="h2mod">Ministerio de Justicia y Seguridad Publica <br>
+                            Direccion de Recursos Humanos<br>
+                            SISADMRH</h2>
                        
                     </div>
                    </div>
@@ -29,9 +29,9 @@
     <br>
     <form name='f' th:action="@{/j_spring_security_check}" method='POST'>
         <div class="row text-center" align="center">
-            <img src="../../static/image/login.jpg" width="210" th:src="@{/image/login.jpg}" />
+            <img src="../../static/image/login.jpg" width="150" th:src="@{/image/login1.jpg}" />
         </div>
-        <h2>Introduzca nombre de usuario y contraseña:</h2>
+        <h2 class="h2mod">Introduzca nombre de usuario y contraseña:</h2>
         <div class="inset">
             
             <div th:if="${#request.getParameter('error') == 'true'}"
@@ -44,25 +44,21 @@
                 </span>
 
             </div>
-            <p>
             <label for="username">USUARIO</label>
             <input type="text"  name="username" id ="username">
-            </p>
-            <p>
-                <label for="password">CONTRASEÑA</label>
-                <input type="password" name="password" id="password">
-            </p>
-            <p>
-                <input type="checkbox" name="remember" id="remember">
-                <label for="remember">Recordar mi usuario</label>
-            </p>
-        </div>
+            <label for="password">CONTRASEÑA</label>
+            <input type="password" name="password" id="password">
+             </div>
         <p class="p-container">
            <input name="submit" type="submit" value="Login" />
         </p>
       </form>
    <div class="col-md-12">
-            <th:block th:include="footer"></th:block>
+            <footer class="footer">
+      <div class="container" align="center">
+        <span class="fotmod"> Derechos Reservados UES/FIA/EISI.</span>
+      </div>
+    </footer>
    </div>
     
 </body>
