--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -29,7 +29,7 @@
     <br>
     <form name='f' th:action="@{/j_spring_security_check}" method='POST'>
         <div class="row text-center" align="center">
-            <img src="../../static/image/login.jpg" width="150" th:src="@{/image/login1.jpg}" />
+            <img src="../../static/image/login.jpg" width="150" th:src="@{/image/login4.png}" />
         </div>
         <h2 class="h2mod">Introduzca nombre de usuario y contraseña:</h2>
         <div class="inset">
